--- a/travelup/travelup.html
+++ b/travelup/travelup.html
@@ -197,8 +197,13 @@
     </div>
 
     <!-- Footer -->
-    <footer class="padding-16 center">
+    <footer class="padding-16" style="margin-left: 3%">
       <p>Website by Frances Caldwell</p>
+      <span
+        ><a href="application.html"
+          >Apply to be a Pilot on the Celestial Frontier</a
+        ></span
+      >
     </footer>
   </body>
 </html>
