--- a/travelup/travelup.html
+++ b/travelup/travelup.html
@@ -16,6 +16,7 @@
     <!-- Navbar -->
     <div id="navbar">
       <img src="travelup.png" style="width: 110px; height: 40px;"/ >
+      <a href="countdown.html" id="countdown-timer" class="navItem"></a>
     </div>
 
     <!-- Landing Section -->
@@ -205,5 +206,6 @@
         ></span
       >
     </footer>
+    <script src="travelup.js"></script>
   </body>
 </html>
