--- a/travelup/travelup.html
+++ b/travelup/travelup.html
@@ -16,7 +16,13 @@
     <!-- Navbar -->
     <div id="navbar">
       <img src="travelup.png" style="width: 110px; height: 40px;"/ >
-      <a href="countdown.html" id="countdown-timer" class="navItem"></a>
+      <a href="countdown.html" id="countdown-timer" class="navItem timer"></a>
+      <a href="login.html"
+        ><img
+          src="spaceman.png"
+          style="width: 45px; height: 45px"
+          class="navItem profile"
+      /></a>
     </div>
 
     <!-- Landing Section -->
