--- a/travelup/travelup.html
+++ b/travelup/travelup.html
@@ -17,7 +17,7 @@
     <div id="navbar">
       <img src="travelup.png" style="width: 110px; height: 40px;"/ >
       <a href="countdown.html" id="countdown-timer" class="navItem timer"></a>
-      <a href="login.html"
+      <a href="login.php"
         ><img
           src="spaceman.png"
           style="width: 45px; height: 45px"
