--- a/travelup/application.html
+++ b/travelup/application.html
@@ -13,7 +13,7 @@
     <div id="landing-bg">
       <!-- Navbar -->
       <div id="navbar">
-        <a href="travelup.html"
+        <a href="travelup.php"
           ><img src="travelup.png" style="width: 110px; height: 40px; filter:
           invert(100%)"/ ></a
         >
